# lawruler-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  endpoints.yaml  pyproject.toml
.github/workflows/: ci.yml
lawruler_mcp/: client.py  credentials.py  server.py
lawruler_mcp/setup/: oauth_flow.py  verify.py
tests/: config.py  test_security.py
