[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lawruler-mcp"
version = "0.1.1"
description = "LawRuler Legal CRM MCP server for lead and intake management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["lawruler", "mcp", "legal", "crm", "intake", "lead-management", "claude"]
dependencies = [
    "mcp[cli]>=1.27.2",
    "requests>=2.31.0",
    "python-dotenv>=1.2.2",
    "keyring>=25.7.0",
]

[project.scripts]
lawruler-mcp = "lawruler_mcp.server:main"
lawruler-mcp-setup = "lawruler_mcp.setup.oauth_flow:main"
lawruler-mcp-verify = "lawruler_mcp.setup.verify:main"

[project.urls]
Homepage = "https://github.com/RosenAdvertising/lawruler-mcp"
Issues = "https://github.com/RosenAdvertising/lawruler-mcp/issues"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
